samples/_failures_safe/1761534981_92cf05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_980cb889.c: In function ‘main’:
./samples/SAFE/__tmp_980cb889.c:175:9: error: expected expression at end of input
  175 |         if (
      |         ^~
./samples/SAFE/__tmp_980cb889.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_980cb889.c:175:9: error: expected declaration or statement at end of input
